--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,6 +1,7 @@
 name: scheduled-scrape
+
 on:
-  workflow_dispatch:    # 수동 실행 시에만 동작
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -8,6 +9,9 @@ permissions:
 jobs:
   run-scraper:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: mobile_scraper   # 👈 모든 step 실행 경로를 mobile_scraper로 지정
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,20 +30,8 @@ jobs:
           python -m playwright install --with-deps
 
       - name: Run scrape
+        run: python scrape.py   # 👈 scrape.py 실행
         env:
           TARGET_URLS: ${{ secrets.TARGET_URLS }}
           CSS_ITEM:    ${{ secrets.CSS_ITEM }}
           CSS_TITLE:   ${{ secrets.CSS_TITLE }}
-          CSS_LINK:    ${{ secrets.CSS_LINK }}
-          MAX_ITEMS:   ${{ secrets.MAX_ITEMS || 10 }}   # 비어있으면 기본값 10
-        run: python scrape.py
-
-      - name: Commit & push results
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config user.name  "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add data/results.json
-          git commit -m "update results $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "no changes"
-          git push
