--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          persist-credentials: ture
+          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
